--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="gangList" class="card-container"></div>
     </div>
 
-    <audio id="backgroundAudio" src="song1.mp3" loop autoplay></audio>
+    <audio id="backgroundAudio" src="lithiumnirvana.mp3" loop autoplay></audio>
 
     <div id="clock"></div>
     <div id="timeCheckPopup" style="display: none;">
