--- a/depot.html
+++ b/depot.html
@@ -60,7 +60,7 @@
       
     </div>
 
-    <audio id="backgroundAudio" src="song2.mp3" loop autoplay></audio>
+    <audio id="backgroundAudio" src="wireswap.mp3" loop autoplay></audio>
 
     <div id="clock"></div>
     <div id="timeCheckPopup" style="display: none;">
