--- a/hoa.html
+++ b/hoa.html
@@ -38,82 +38,44 @@
 
     <div class="profile-card-container">
         <div class="profile-card">
-            <img src="user1.png" />
+            <img src="face1.png" />
             <div class="info">
-                <h2>Classified</h2>
-                <p>Claims to be a master hacker and can perform EDR bypasses. In reality just downloads public DLLs and crashes people with particle avatars. Gets rejected by every girl he talks to but keeps trying. Claims to steal credit cards but can't even crack a basic captcha.</p>
+                <h2>Hunter Thoma</h2>
+                <p>hunter decided it would be a good idea to talk to children in a vr game and get them to add him,
+         usually that would be ok because alot of adults ranging 18 - 50 play vrchat and some of them ( 18 - 25 ) have friends that are maybe ( 16 - 30 )
+         which i get that but i dont get why a 18 year old would think its anywhere near a good idea to add a 10 y/o , 12 y/o , 13 y/o , and a 14 y/o. just to promote vaping and other harmful stuff to the 10 y/o and asking a 13 y/o to date him ( after he dated a 16 y/o ) - he also promoted porn and said sexual stuff to these minors ( illegal in the U.S.A to provide minors with pornography, and also illegal to say sexual things to minors - pedophilia - ) he made his ex ( 16 ) cry alot said sexual stuff to her and promoted harm to her like it was ok.</p>
             </div>
         </div>
 
         <div class="profile-card">
-            <img src="user2.jpg" />
+            <img src="face2.png" />
             <div class="info">
-                <h2>112</h2>
-                <p>Joined random crews claiming to know everyone in the scene. Got exposed for being a CP spreader and extorter. Now banned from most communities but still tries to make alts. Claims to have connections but really just a discord lurker.</p>
+                <h2>Femboy~Spartan</h2>
+                <p>larping off of multiple gangs on vrc, wierd femboy, lies about being in military and same for his grandfather. Does nazi and kkk rp in vrchat and erps with people ( possibly minors im not sure ) , he has larped harm , claimed com , and is gullible as fuck.</p>
             </div>
         </div>
 
         <div class="profile-card">
-            <img src="user3.gif" />
+            <img src="face3.png" />
             <div class="info">
-                <h2>Blue Phoenix</h2>
-                <p>45 year old woman grooming teenagers in VRChat. Known for targeting minors and making them uncomfortable. Multiple people have spoken out but she keeps making new accounts. Absolute predator.</p>
+                <h2></h2>
+                <p></p>
             </div>
         </div>
 
         <div class="profile-card">
-            <img src="user4.png" />
+            <img src="face4.png" />
             <div class="info">
-                <h2>Courtbox</h2>
-                <p>Cemetery wannabe who larps about knowing famous people. Claims to be connected to big groups but really just name drops and hopes someone believes him. Spends his time singing on Instagram thinking he's famous.</p>
+                <h2></h2>
+                <p></p>
             </div>
         </div>
 
         <div class="profile-card">
-            <img src="user5.png" />
+            <img src="face5.png" />
             <div class="info">
-                <h2>Arab Jinn</h2>
-                <p>Claims to crack cheats but begs everyone for DLLs. Caught multiple times talking to minors. Watches BBC cuck porn and isn't ashamed about it. Currently in rehab for fent addiction. Classic VRChat degenerate.</p>
-            </div>
-        </div>
-
-        <div class="profile-card">
-            <img src="user6.png" />
-            <div class="info">
-                <h2>Script Kiddie #1</h2>
-                <p>Downloads public mod menus and thinks he's a hacker. Crashes lobbies and steals avatars then acts tough. Can't write a single line of code but flexes like he's Mr. Robot. Gets his mods from YouTube tutorials.</p>
-            </div>
-        </div>
-
-        <div class="profile-card">
-            <img src="user7.png" />
-            <div class="info">
-                <h2>Fake Doxxer</h2>
-                <p>Threatens to dox everyone he meets but has zero actual info. Just uses spokeo and thinks he's a cybersecurity expert. Posts random addresses from Google and hopes people believe him. Pure larp energy.</p>
-            </div>
-        </div>
-
-        <div class="profile-card">
-            <img src="user8.png" />
-            <div class="info">
-                <h2>VR Predator</h2>
-                <p>Hangs out in worlds with minors and tries to groom them. Gets banned repeatedly but makes new accounts. Known for "love bombing" kids until they trust him then takes them to private worlds. Absolute scum.</p>
-            </div>
-        </div>
-
-        <div class="profile-card">
-            <img src="user9.png" />
-            <div class="info">
-                <h2>Crash Avatar User</h2>
-                <p>Only wears particle crash avatars and ruins public lobbies for fun. No personality, just crashes people and laughs about it. Gets off on making others miserable. Zero skills outside of being annoying.</p>
-            </div>
-        </div>
-
-        <div class="profile-card">
-            <img src="user10.png" />
-            <div class="info">
-                <h2>Catfish Extraordinaire</h2>
-                <p>Uses voice changers and anime girl avatars to catfish lonely dudes. Scams them for Steam cards and Discord Nitro. Has multiple "boyfriends" at once. Master manipulator who preys on desperate people.</p>
+                <h2></h2>
+                <p></p>
             </div>
         </div>
     </div>
