--- a/hoa.html
+++ b/hoa.html
@@ -38,7 +38,7 @@
 
     <div class="profile-card-container">
         <div class="profile-card">
-            <img src="face1.png" />
+            <img src="wface1.png" />
             <div class="info">
                 <h2>Hunter Thoma</h2>
                 <p>hunter decided it would be a good idea to talk to children in a vr game and get them to add him,
@@ -48,7 +48,7 @@
         </div>
 
         <div class="profile-card">
-            <img src="face2.png" />
+            <img src="wface2.png" />
             <div class="info">
                 <h2>Femboy~Spartan</h2>
                 <p>larping off of multiple gangs on vrc, wierd femboy, lies about being in military and same for his grandfather. Does nazi and kkk rp in vrchat and erps with people ( possibly minors im not sure ) , he has larped harm , claimed com , and is gullible as fuck.</p>
