--- a/hoa.html
+++ b/hoa.html
@@ -50,14 +50,13 @@
         <div class="profile-card">
             <img src="wface2.png" />
             <div class="info">
-                <h2>Femboy~Spartan</h2>
-                <p>larping off of multiple gangs on vrc, wierd femboy, lies about being in military and same for his grandfather. Does nazi and kkk rp in vrchat and erps with people ( possibly minors im not sure ) , he has larped harm , claimed com , and is gullible as fuck.</p>
+                      <h2>Femboy~Spartan</h2>
+                <p>larping off of multiple gangs on vrc, weird femboy, lies about being in military and same for his grandfather. Does nazi and kkk rp in vrchat and erps with people ( possibly minors im not sure ) , he has larped harm , claimed com , and is gullible as fuck.</p>
             </div>
-            
+        </div>
     </div>
 
-    <audio id="backgroundAudio" src="wlam.mp3" loop autoplay></audio>
-
+    <audio id="backgroundAudio" src="wlam.mp3" loop></audio>
     <div id="clock"></div>
     <div id="timeCheckPopup" style="display: none;">
         You should go to bed!
