--- a/depot.html
+++ b/depot.html
@@ -27,7 +27,7 @@
     <div class="button-container">
         <button class="outlined-button" onclick="window.location.href='index.html';">Home</button>
         <button class="outlined-button" onclick="window.location.href='archive.html';">Archive</button>
-        <button class="outlined-button" onclick="window.location.href='hoa.html';">HOL</button>
+        <button class="outlined-button" onclick="window.location.href='hoa.html';">HOA</button>
     </div>
 
     <div class="section-divider"></div>
