--- a/index.html
+++ b/index.html
@@ -43,14 +43,24 @@
     <div class="section-divider"></div>
 
     <div id="users-section">
-        <h2 class="section-title">Users</h2>
-        <div id="userList" class="card-container"></div>
-    </div>
+        <h2 class="section-title">Gods</h2>
+        <div id="userList" class="card-container">
+    <div class="card">Mxri</div>
+    <div class="card">N23</div>
+    <div class="card">79zip</div>
+    <div class="card">slynnster</div>
+    <div class="card">lord kaiser</div>
+    <div class="card">angler</div>
+    <div class="card">psycho</div>
+    <div class="card">vital</div>
+    <div class="card">reaperboy</div>
+    <div class="card"></div>
+</div>
 
     <div class="section-divider"></div>
 
     <div id="gangs-section">
-        <h2 class="section-title">Gangs</h2>
+        <h2 class="section-title">Larps</h2>
         <div id="gangList" class="card-container"></div>
     </div>
 
