--- a/hoa.html
+++ b/hoa.html
@@ -25,7 +25,7 @@
     <div class="blur-overlay"></div>
     <div class="gif-container">
         <img src="larpmonkeys.png" alt="Larp Monkeys" />
-        <p class="hoa">HALL OF LARPERS</p>
+        <p class="hoa">HALL OF AUTISM</p>
     </div>
 
     <div class="button-container">
