--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
     <div class="card">psycho</div>
     <div class="card">vital</div>
     <div class="card">reaperboy</div>
-    <div class="card"></div>
+    <div class="card">wild</div>
+    <div class="card">d s r</div>
+    <div class="card">d s r</div>
+    <div class="card">meds</div>
+    <div class="card">NOI</div>
+    <div class="card">cyberstar</div>
+
 </div>
 
     <div class="section-divider"></div>
