--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="card">slynnster</div>
     <div class="card">lord kaiser</div>
     <div class="card">angler</div>
-    <div class="card">psycho</div>
+    <div class="card">WitallyPsycho</div>
     <div class="card">vital</div>
     <div class="card">reaperboy</div>
     <div class="card">wild</div>
