--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     <div id="gangs-section">
         <h2 class="section-title">Larps</h2>
         <div id="gangList" class="card-container"></div>
+        <div class="card">zk7</div>
+        <div class="card">030kai</div>
+        <div class="card">mr.lucifer</div>
+        <div class="card">hanako</div>
     </div>
 
     <audio id="backgroundAudio" src="wireswap.mp3" loop autoplay></audio>
