--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div id="gangs-section">
         <h2 class="section-title">Larps</h2>
-        <div id="gangList" class="card-container"></div>
+<div id="gangList" class="card-container">        
         <div class="card">zk7</div>
         <div class="card">030kai</div>
         <div class="card">mr.lucifer</div>
