--- a/hoa.html
+++ b/hoa.html
@@ -42,8 +42,8 @@
             <div class="info">
                 <h2>Hunter Thoma</h2>
                 <p>hunter decided it would be a good idea to talk to children in a vr game and get them to add him,
-         usually that would be ok because alot of adults ranging 18 - 50 play vrchat and some of them ( 18 - 25 ) have friends that are maybe ( 16 - 30 )
-         which i get that but i dont get why a 18 year old would think its anywhere near a good idea to add a 10 y/o , 12 y/o , 13 y/o , and a 14 y/o. just to promote vaping and other harmful stuff to the 10 y/o and asking a 13 y/o to date him ( after he dated a 16 y/o ) - he also promoted porn and said sexual stuff to these minors ( illegal in the U.S.A to provide minors with pornography, and also illegal to say sexual things to minors - pedophilia - ) he made his ex ( 16 ) cry alot said sexual stuff to her and promoted harm to her like it was ok.</p>
+         usually that would be ok because a lot of adults ranging 18 - 50 play vrchat and some of them ( 18 - 25 ) have friends that are maybe ( 16 - 30 )
+         which i get that but i dont get why a 18 year old would think its anywhere near a good idea to add a 10 y/o , 12 y/o , 13 y/o , and a 14 y/o. just to promote vaping and other harmful stuff to the 10 y/o and asking a 13 y/o to date him ( after he dated a 16 y/o ) - he also promoted porn and said sexual stuff to these minors ( illegal in the U.S.A to provide minors with pornography, and also illegal to say sexual things to minors - pedophilia - ) he made his ex ( 16 ) cry a lot said sexual stuff to her and promoted harm to her like it was ok. <a href="https://doxbin.net/upload/hunterthepedophile" target="_blank">( dox )</a></p>
             </div>
         </div>
 
@@ -54,6 +54,15 @@
                 <p>larping off of multiple gangs on vrc, weird femboy, lies about being in military and same for his grandfather. Does nazi and kkk rp in vrchat and erps with people ( possibly minors im not sure ) , he has larped harm , claimed com , and is gullible as fuck.</p>
             </div>
         </div>
+        
+        <div class="profile-card">
+            <img src="wface2.png" />
+            <div class="info">
+                <h2>Mr.Lucifer ( larp )</h2>
+                <p>larping the name mr Lucifer and going around saying they created all of the Lucifer tools from 2020 and onwards. (Skid) (larp) (retarded) ᡕᠵデ气亠 <a href="https://doxbin.net/upload/Mrluciferlarpdoxxed" target="_blank">( dox )</a></p>
+            </div>
+        </div>
+        
     </div>
 
     <audio id="backgroundAudio" src="wxlam.mp3" loop></audio>
