--- a/hoa.html
+++ b/hoa.html
@@ -59,7 +59,8 @@
             <img src="wface3..png" />
             <div class="info">
                 <h2>Mr.Lucifer ( larp )</h2>
-                <p>larping the name mr Lucifer and going around saying they created all of the Lucifer tools from 2020 and onwards. (Skid) (larp) (retarded) ᡕᠵデ气亠 <a href="https://doxbin.net/upload/Mrluciferlarpdoxxed" target="_blank">( dox )</a></p>
+                <p>( creds to 79zip for dox and hoa paste ) 
+                    larping the name mr Lucifer and going around saying they created all of the Lucifer tools from 2020 and onwards. (Skid) (larp) (retarded) ᡕᠵデ气亠 <a href="https://doxbin.net/upload/Mrluciferlarpdoxxed" target="_blank">( dox )</a></p>
             </div>
         </div>
         
