--- a/archive.html
+++ b/archive.html
@@ -36,7 +36,7 @@
 
         <div class="depot-card">
             <video controls preload="none" loading="lazy" poster="archive_thumbnail1.jpg">
-                <source src="archive_video1.mov" type="video/mov">
+                <source src="varchive_video1.mov" type="video/mov">
             </video>
         </div>
 
