--- a/hoa.html
+++ b/hoa.html
@@ -64,6 +64,14 @@
             </div>
         </div>
         
+           <div class="profile-card">
+            <img src="wface4.png" />
+            <div class="info">
+                <h2>ilycashyy</h2>
+                <p> threatens to dox, has a giant ego for no reason, needs his friends as backup during any confrontation, larps being known and larps com. Overall just a fat ass loser in gen that nobody knows and cares about</p>
+            </div>
+        </div>
+        
     </div>
 
     <audio id="backgroundAudio" src="wxlam.mp3" loop></audio>
