--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="card">meds</div>
     <div class="card">NOI</div>
     <div class="card">cyberstar</div>
-    <div class="card">biv</div>
+    <div class="card">oxy.prod</div>
 </div>
 
     <div class="section-divider"></div>
