--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <div class="card">mr.lucifer</div>
         <div class="card">hanako</div>
         <div class="card">ilycashyy</div>
+        <div class="card">(joke) Jeffery E</div>
     </div>
 
     <audio id="backgroundAudio" src="wireswap.mp3" loop autoplay></audio>
