--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="card">vital</div>
     <div class="card">reaperboy</div>
     <div class="card">wild</div>
-    <div class="card">d s r</div>
+    <div class="card">misa</div>
     <div class="card">d s r</div>
     <div class="card">meds</div>
     <div class="card">NOI</div>
