--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <div class="card">NOI</div>
     <div class="card">cyberstar</div>
     <div class="card">oxy.prod</div>
+    <div class="card">carnage ²⁷²⁷</div>
 </div>
 
     <div class="section-divider"></div>
@@ -74,7 +75,7 @@
         <div class="card">mr.lucifer</div>
         <div class="card">hanako</div>
         <div class="card">ilycashyy</div>
-        <div class="card">(joke) Jeffery E</div>
+        <div class="card">(joke) Jeffery E ²⁷²⁷</div>
     </div>
 
     <audio id="backgroundAudio" src="wireswap.mp3" loop autoplay></audio>
