--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <div id="users-section">
         <h2 class="section-title">Gods</h2>
         <div id="userList" class="card-container">
-    <div class="card">Mxri</div>
-    <div class="card">N23</div>
-    <div class="card">79zip</div>
-    <div class="card">slynnster</div>
-    <div class="card">lord kaiser</div>
-    <div class="card">angler</div>
+    <div class="card">ᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳMxri</div>
+    <div class="card">ᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳN23</div>
+    <div class="card">ᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳ79zip</div>
+    <div class="card">ᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳslynnster</div>
+    <div class="card">ᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳlord kaiser</div>
+    <div class="card">ᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳangler</div>
     <div class="card">WitallyPsycho</div>
     <div class="card">vital</div>
     <div class="card">reaperboy</div>
@@ -60,7 +60,7 @@
     <div class="card">meds</div>
     <div class="card">NOI</div>
     <div class="card">cyberstar</div>
-    <div class="card">oxy.prod</div>
+    <div class="card">oxy.prodᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳ</div>
     <div class="card">carnage ²⁷²⁷</div>
 </div>
 
