--- a/hoa.html
+++ b/hoa.html
@@ -71,6 +71,14 @@
                 <p> threatens to dox, has a giant ego for no reason, needs his friends as backup during any confrontation, larps being known and larps com. Overall just a fat ass loser in gen that nobody knows and cares about</p>
             </div>
         </div>
+
+           <div class="profile-card">
+            <img src="wface5.png" />
+            <div class="info">
+                <h2>Skids Marcano</h2>
+                <p>Beefing With 2727 and Attacking 2727 Members.</p>
+            </div>
+        </div>
         
     </div>
 
