--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <div class="card">hanako</div>
         <div class="card">ilycashyy</div>
         <div class="card">(joke) Jeffery E ²⁷²⁷</div>
+        <div class="card">Skids Marcano</div>
     </div>
 
     <audio id="backgroundAudio" src="wireswap.mp3" loop autoplay></audio>
