--- a/hoa.html
+++ b/hoa.html
@@ -79,6 +79,15 @@
                 <p>Beefing With 2727 and Attacking 2727 Members.</p>
             </div>
         </div>
+
+            <div class="profile-card">
+            <img src="wface6.png" />
+            <div class="info">
+                <h2>Shot Liberty</h2>
+                <p>( creds to jeffery E2727 for dox and hoa paste ) 
+                 Beefing with 2727 Attacking 2727 Extortion Spreading CP <a href="https://doxbin.net/upload/kadynthestbpedo" target="_blank">( dox )</a></p>
+            </div>
+        </div>
         
     </div>
 
