--- a/hoa.html
+++ b/hoa.html
@@ -76,7 +76,7 @@
             <img src="wface5.png" />
             <div class="info">
                 <h2>Skids Marcano</h2>
-                <p>Beefing With 2727 and Attacking 2727 Members.</p>
+                <p>Beefing With 2727, and Attacking 2727 Members.</p>
             </div>
         </div>
 
@@ -85,7 +85,8 @@
             <div class="info">
                 <h2>Shot Liberty</h2>
                 <p>( creds to jeffery E2727 for dox and hoa paste ) 
-                 Beefing with 2727 Attacking 2727 Extortion Spreading CP <a href="https://doxbin.net/upload/kadynthestbpedo" target="_blank">( dox )</a></p>
+                
+                    kadyn thinks its ok to, 1. attack a group ( 2727 ) and to beef with them, 2. extort people ( not cool man ) , and 3. spread cp ( thats pedophillia man no matter your age you dirty fuck ) <a href="https://doxbin.net/upload/kadynthestbpedo" target="_blank">( dox )</a></p>
             </div>
         </div>
         
