--- a/hoa.html
+++ b/hoa.html
@@ -67,7 +67,7 @@
            <div class="profile-card">
             <img src="wface4.png" />
             <div class="info">
-                <h2>ilycashyy</h2>
+                <h2>ilycashyy / 1078840947481260153 </h2>
                 <p> threatens to dox, has a giant ego for no reason, needs his friends as backup during any confrontation, larps being known and larps com. Overall just a fat ass loser in gen that nobody knows and cares about</p>
             </div>
         </div>
