--- a/depot.html
+++ b/depot.html
@@ -14,6 +14,10 @@
         Click to Enter
     </div>
 
+        <div class="volume-slider-container">
+        <input id="volume-slider" type="range" min="0" max="1" step="0.01" value="0.5">
+    </div>
+
     <video id="bgVideo" autoplay muted loop playsinline>
         <source src="bg.mp4" type="video/mp4" />
     </video>
