--- a/archive.html
+++ b/archive.html
@@ -13,6 +13,10 @@
     <div id="overlay" role="button" aria-label="Click to Enter" onclick="playMusicAndHideOverlay()">
         Click to Enter
     </div>
+
+        <div class="volume-slider-container">
+        <input id="volume-slider" type="range" min="0" max="1" step="0.01" value="0.5">
+    </div>
     
     <video id="bgVideo" autoplay muted loop playsinline>
         <source src="bg.mp4" type="video/mp4" />
