--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="card">meds</div>
     <div class="card">NOI</div>
     <div class="card">cyberstar</div>
-    <div class="card">oxy.prodᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳ</div>
+    <div class="card">⁶⁷ˡᵃʳᵖˢspectrᵏʳ⁴ˣᶜᵘˡᵗˡᵉʳ</div>
     <div class="card">carnage ²⁷²⁷</div>
 </div>
 
