--- a/hoa.html
+++ b/hoa.html
@@ -10,8 +10,8 @@
     <meta name="description" content="Hall of larpers.">
 </head>
 <body>
-    <div id="overlay" role="button" aria-label="Click to Enter" onclick="playMusicAndHideOverlay()">
-        Click to Enter
+    <div id="overlay" role="button" aria-label="click to see retards" onclick="playMusicAndHideOverlay()">
+        click to see retards
     </div>
     
     <div class="volume-slider-container">
