--- a/hoa.html
+++ b/hoa.html
@@ -76,7 +76,7 @@
             <img src="wface5.png" />
             <div class="info">
                 <h2>Skids Marcano</h2>
-                <p>Beefing With 2727, and Attacking 2727 Members.</p>
+                <p>marcano thinks its funny to attack and beef with them, even though he is unknown and harmless just like, cashyy and shot liberty. </p>
             </div>
         </div>
 
