--- a/depot.html
+++ b/depot.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="button-container">
-        <button class="outlined-button" onclick="window.location.href='index.html';">Home</button>
+        <button class="outlined-button" onclick="window.location.href='home.html';">Home</button>
         <button class="outlined-button" onclick="window.location.href='archive.html';">Archive</button>
         <button class="outlined-button" onclick="window.location.href='hoa.html';">HOA</button>
     </div>
