--- a/hoa.html
+++ b/hoa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>larpmonkeys.com</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cldont be oudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Hall of larpers.">
 </head>
@@ -68,7 +68,7 @@
             <img src="wface4.png" />
             <div class="info">
                 <h2>ilycashyy / 1078840947481260153 </h2>
-                <p> threatens to dox, has a giant ego for no reason, needs his friends as backup during any confrontation, larps being known and larps com. Overall just a fat ass loser in gen that nobody knows and cares about</p>
+                <p> has a giant ego for no reason, needs his friends as backup during any confrontation, larps being known and larps com. Overall just a fat ass loser in gen that nobody knows and cares about</p>
             </div>
         </div>
 
