--- a/hoa.html
+++ b/hoa.html
@@ -89,6 +89,14 @@
                     kadyn thinks its ok to, 1. attack a group ( 2727 ) and to beef with them, 2. extort people ( not cool man ) , and 3. spread cp ( thats pedophillia man no matter your age you dirty fuck ) <a href="https://doxbin.net/upload/kadynthestbpedo" target="_blank">( dox )</a></p>
             </div>
         </div>
+
+            </div> class="profile-card">
+            <img src="wface7.png" />
+            <div class="info">
+                <h2>030 kai</h2>
+                <p>kai loves larping lc and coms, likes to ban and time out people when they raid him and has a high ass ego for nothing. This kid is the defenition of a retard, cant speak for himself and is already kicked from 5 - 6 groups. This kid is a fucking reject lmao( dox is soon )</a></p>
+            </div>
+        </div>
         
     </div>
 
