--- a/hoa.html
+++ b/hoa.html
@@ -93,7 +93,7 @@
             </div> class="profile-card">
             <img src="wface7.png" />
             <div class="info">
-                <h2>030 kai</h2>
+                <h2>030 kai / 1459963381019709652 </h2>
                 <p>kai loves larping lc and coms, likes to ban and time out people when they raid him and has a high ass ego for nothing. This kid is the defenition of a retard, cant speak for himself and is already kicked from 5 - 6 groups. This kid is a fucking reject lmao( dox is soon )</a></p>
             </div>
         </div>
